<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>allan_variance_ros2</name>
  <version>0.0.0</version>
  <description>ROS 2 version of Allan Variance Designed for Kalibr.</description>
  <maintainer email="lcai13@fudan.edu.cn">DarrenCai</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>sensor_msgs</depend>
  <depend>yaml-cpp</depend>
	<depend>boost</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
